--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,5 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /app
-      - /app/node_modules
+      - .:/app
     container_name: frontend-container
